# Learning

./: CLAUDE.md  README.md
.claude/commands/: new-js-topic.md
cpp/: README.md  ROADMAP.md  testing.h
cpp/advanced/01-move-semantics-and-type-deduction/: examples.cpp  exercise.cpp  exercise.h  exercise_test.cpp  notes.md
cpp/advanced/02-error-handling-smart-pointers-and-concurrency/: examples.cpp  exercise.cpp  exercise.h  exercise_test.cpp  notes.md
cpp/advanced/03-performance-fundamentals/: examples.cpp  exercise.cpp  exercise.h  exercise_test.cpp  notes.md
cpp/advanced/04-code-optimization/: examples.cpp  exercise.cpp  exercise.h  exercise_test.cpp  notes.md
cpp/advanced/05-profiling-and-benchmarking/: examples.cpp  exercise.cpp  exercise.h  exercise_test.cpp  (+1 more)
css/: README.md  ROADMAP.md
css/01-css-fundamentals/: notes.md
css/02-flexbox-and-grid/: notes.md
css/03-responsive-and-modern-css/: notes.md
go/: README.md  ROADMAP.md  go.mod
go/capstone-container-runtime/: README.md
go/capstone-message-queue/: README.md  go.mod
html/: README.md
html/01-html-fundamentals/: notes.md
javascript/: README.md  ROADMAP.md  package.json
javascript/capstone-activity-tracker/: notes.md
rust/: Cargo.toml  README.md  ROADMAP.md
rust/capstone-message-queue/: Cargo.toml  README.md
rust/capstone-message-queue/src/: broker.rs  concurrent.rs  error.rs  groups.rs  lib.rs  protocol.rs  server.rs  storage.rs
rust/capstone-message-queue/tests/: broker_test.rs  concurrent_test.rs  groups_test.rs  server_test.rs  storage_test.rs
sources/: diydocker.txt
(+333 files in other folders)
