[package]
name = "mini-mq"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "broker"
path = "src/bin/broker.rs"

[[bin]]
name = "producer"
path = "src/bin/producer.rs"

[[bin]]
name = "consumer"
path = "src/bin/consumer.rs"

[dependencies]
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempfile = "3"
